--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ chardetng = "0.1.3"
 encoding_rs = "0.8.17"
 anyhow = "1.0"
 uuid = { version = "1.3.0", features = ["v4"] }
-once_cell = "1.8"
+lazy_static = "1.4.0"
 syntect = "5.0.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
