--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ encoding_rs = "0.8.17"
 anyhow = "1.0"
 uuid = { version = "1.3.0", features = ["v4"] }
 lazy_static = "1.4.0"
+sublime_fuzzy = "0.7.0"
 syntect = "5.0.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
